--- a/src/routes/home/style.css
+++ b/src/routes/home/style.css
@@ -58,6 +58,8 @@
 }
 .tag p {
   font-size: 20px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
   margin: auto;
 }
 
